# tinyinference

./: .gitignore  Cargo.toml  LICENSE  README.md  tinyinference.example.toml
.github/workflows/: rust.yml
src/: app.rs  config.rs  lib.rs  main.rs  server.rs  system.rs  ui.rs
