[package]
name = "tinyinference"
version = "0.1.0"
edition = "2024"
description = "A minimal terminal control plane for memory-conscious llama.cpp inference"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
directories = "6.0"
ratatui = "0.30.0"
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.38"
toml = "0.9"
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3.23"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
